--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,15 +1,15 @@
 #服务启动端口
 server:  
-  port: 8092
+  port: 8888
   tomcat:
     uri-encoding: UTF-8
 #数据库配置
 jdbc:
   datasource:
     name: test
-    url: jdbc:mysql://39.104.76.67:3086/oep_cms?characterEncoding=utf8&useSSL=false
-    username: test
-    password: 09)(poPO
+    url: jdbc:mysql://172.17.244.173:3366/oep_cms?characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull&autoReconnect=true&failOverReadOnly=false
+    username: root
+    password: 2<dM>=y27Pk.S9
     # 使用druid数据源
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
@@ -26,13 +26,6 @@ jdbc:
     testOnReturn: false
     poolPreparedStatements: true
     maxOpenPreparedStatements: 20
-
-#Redis配置
-redis:
-  host: 39.104.76.67
-  port: 5379
-  password: oep-be-123!@#098)(*
-
 mybatis:
   mapper-locations: classpath:mappers/*.xml
   
@@ -48,9 +41,9 @@ spring:
       flush-mode: immediate
   redis:
     timeout: 3000
-    port: 5379
-    password: oep-be-123!@#098)(*
-    host: 39.104.76.67
+    port: 3379
+    password: 1Lu.8x5YRJ
+    host: 172.17.244.173
     database: 5 
     pool:
       max-wait: 1000
@@ -70,7 +63,7 @@ spring:
 systemconfig:
   file:
     base-path: d:/test/3
-    qt-url: http://39.104.76.67:8088/oep-be
+    qt-url: http://39.106.169.185/oep-be
   yunzhi:
     url: http://edu.hivoice.cn:8085/eval/mp3
     appkey: n3nibwi4xvjsv43at5jccmq2uhgdav3suorh4lye
@@ -83,10 +76,10 @@ systemconfig:
       allowCredentials: "false"
       maxAge: 86400
   aliOSS:
-    endpoint: http://oss-cn-huhehaote.aliyuncs.com
-    accessKeyId: LTAIVtgwtV8fPSSG
-    accessKeySecret: gWyoub5rrgPU4wh1VXNNMAooQK78o6
-    bucketName: xl-audio-file-store
+    endpoint: http://oss-cn-beijing.aliyuncs.com
+    accessKeyId: LTAINbwOMw6UaaK3
+    accessKeySecret: CxOkyQD24n8d0kOzg3MYcQlopBUeDY
+    bucketName: xl-oss-pro
     pool:
       #允许打开的最大HTTP连接数。默认为1024
       maxConnections: 1024
